--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,111 +30,30 @@
 
 body {
     @apply
-      bg-white dark:bg-gray-900
-      font-mercury
+      bg-white dark:bg-neutral-900
+      font-notoSans
       text-gray-800 dark:text-gray-100
-      selection:bg-gray-200 dark:selection:bg-gray-700;
+      selection:bg-neutral-200 dark:selection:bg-neutral-700;
 
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .article-body {
-    @apply
-        text-base sm:text-lg md:text-xl
-        !max-w-full
-        text-gray-800 dark:text-gray-200
-        prose-headings:relative
-        prose-headings:text-gray-800 dark:prose-headings:text-gray-100
-        prose-h2:!mt-8
-        prose-h2:!mb-2
-        prose-h2:!text-lg
-        prose-h2:uppercase
-        prose-h2:tracking-wide
-        prose-h2:font-bold
-        prose-h3:!mt-6
-        prose-h3:font-bold
-        !leading-normal
-        prose-strong:text-inherit
-        prose-a:font-normal
-        prose-a:underline
-        prose-a:decoration-orange-300
-        prose-a:underline-offset-[2px]
-        hover:prose-a:bg-orange-100
-        prose-figcaption:font-semibold
-        prose-figcaption:text-gray-500
-        prose-figcaption:!leading-normal
-        prose-img:my-0
-        prose-pre:py-8 sm:prose-pre:!p-6
-        prose-pre:border-t prose-pre:border-b prose-pre:border-gray-200 dark:prose-pre:border-gray-700
-        prose-pre:bg-gray-50 dark:prose-pre:bg-gray-800
-        prose-pre:text-[17.5px]
-        prose-pre:!text-gray-800 dark:prose-pre:!text-gray-100
-        prose-pre:!leading-normal
-        prose-code:before:content-['']
-        prose-code:after:content-['']
-    ;
+    @apply prose;
 
     font-feature-settings: "liga" 1;
 }
 
-.article-body > * {
-  @apply col-start-1 col-end-13 lg:col-start-5 xl:col-start-4 xl:col-end-10;
+.article-body figure img,
+.article-body figure svg {
+  @apply border border-neutral-200 rounded-lg;
 }
 
-.article-body > p {
-  @apply my-3;
+.sp-overlay {
+  background-color: transparent !important;
 }
 
-.article-body > aside {
-  @apply relative my-3 font-idealSans col-start-1 col-end-13 lg:col-end-5 xl:col-end-4 lg:text-right text-lg text-gray-500 dark:text-gray-400;
-}
-
-.article-body > aside code {
-  @apply !text-gray-500 dark:!text-gray-400;
-}
-
-.article-body > aside p {
-  @apply lg:absolute lg:right-0 lg:max-w-[24ch];
-}
-
-.article-body > figure {
-  @apply my-6;
-}
-
-.article-body > figure img,
-.article-body > figure svg {
-    @apply w-full border border-gray-200 dark:border-gray-700;
-}
-
-.article-body > figure figcaption {
-  @apply font-idealSans !text-base text-gray-500 dark:text-gray-400 font-normal mt-3;
-}
-
-.article-body > pre {
- @apply my-3 overflow-auto;
-}
-
-.article-body p code {
-    @apply
-      px-0.5
-      font-normal
-      text-lg
-      text-gray-800 dark:text-gray-100;
-}
-
-.article-body ul {
-  @apply list-disc;
-}
-
-.select-item[aria-selected=true] {
-  @apply bg-gray-200 dark:bg-gray-700;
-}
-
-input[type="color"]::-webkit-color-swatch-wrapper {
-  @apply p-0;
-}
-
-input[type="color"]::-webkit-color-swatch {
-  @apply rounded-none border-0;
+.sp-preview-container {
+  background: transparent !important;
 }
