--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
-  color-scheme: light dark;
+  color-scheme: light;
 
   --diagram-border: #e5e5e5;
   --diagram-background: #fafafa;
@@ -14,58 +10,54 @@
   --diagram-overlay-blend-mode: multiply;
 }
 
-.dark {
-  --diagram-border: #404040;
-  --diagram-background: #262626;
-  --diagram-text: white;
-  --diagram-text-lighter: #737373;
-  --diagram-image: #374151;
-  --diagram-placeholder: #4B5563;
-  --diagram-overlay-blend-mode: screen;
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+
+    --diagram-border: #404040;
+    --diagram-background: #262626;
+    --diagram-text: white;
+    --diagram-text-lighter: #737373;
+    --diagram-image: #374151;
+    --diagram-placeholder: #4B5563;
+    --diagram-overlay-blend-mode: screen;
+  }
 }
 
-*:focus {
-  outline: 0;
+@layer reset {
+  *, *:before, *:after {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+  }
 }
 
-*:focus-visible {
-  outline: initial;
+html {
+  font-size: clamp(1rem, 2vw + 0.25rem, 1.25rem);
 }
 
-body {
-    @apply
-      bg-white dark:bg-neutral-900
-      font-notoSans
-      text-neutral-800 dark:text-neutral-100
-      selection:bg-neutral-200 dark:selection:bg-neutral-700;
+p {
+  line-height: 1.3;
+}
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+figure {
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
+
+img {
+  max-inline-size: 100%;
+}
+
+pre {
+  overflow-x: auto;
+  background-color: lch(50% 0 0 / 15%);
 }
 
 .container {
-  @apply xl:max-w-[1200px];
-}
-
-.article-body {
-    @apply prose;
-
-    font-feature-settings: "liga" 1;
-}
-
-.article-body figure img,
-.article-body figure svg {
-  @apply border border-neutral-200 rounded-lg;
-}
-
-.sp-overlay {
-  background-color: transparent !important;
-}
-
-.sp-preview-container {
-  background: transparent !important;
-}
-
-.article-toc {
-  height: calc(100vh - 6rem);
+  max-inline-size: 75rem;
+  margin: 0 auto;
+  padding: 0 1.5rem;
 }
